; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/comctl32/extr_listview.c_get_ansi_notification.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/comctl32/extr_listview.c_get_ansi_notification.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [25 x i8] c"unknown notification %x\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @get_ansi_notification to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_ansi_notification(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %19 [
    i32 139, label %5
    i32 138, label %5
    i32 137, label %6
    i32 136, label %6
    i32 135, label %7
    i32 134, label %7
    i32 129, label %8
    i32 128, label %8
    i32 131, label %9
    i32 130, label %9
    i32 133, label %10
    i32 132, label %10
    i32 141, label %11
    i32 140, label %11
    i32 149, label %12
    i32 148, label %12
    i32 153, label %13
    i32 150, label %14
    i32 145, label %15
    i32 144, label %15
    i32 147, label %16
    i32 146, label %16
    i32 143, label %17
    i32 142, label %17
    i32 152, label %18
    i32 151, label %18
  ]

5:                                                ; preds = %1, %1
  store i32 139, i32* %2, align 4
  br label %24

6:                                                ; preds = %1, %1
  store i32 137, i32* %2, align 4
  br label %24

7:                                                ; preds = %1, %1
  store i32 135, i32* %2, align 4
  br label %24

8:                                                ; preds = %1, %1
  store i32 129, i32* %2, align 4
  br label %24

9:                                                ; preds = %1, %1
  store i32 131, i32* %2, align 4
  br label %24

10:                                               ; preds = %1, %1
  store i32 133, i32* %2, align 4
  br label %24

11:                                               ; preds = %1, %1
  store i32 141, i32* %2, align 4
  br label %24

12:                                               ; preds = %1, %1
  store i32 149, i32* %2, align 4
  br label %24

13:                                               ; preds = %1
  store i32 153, i32* %2, align 4
  br label %24

14:                                               ; preds = %1
  store i32 150, i32* %2, align 4
  br label %24

15:                                               ; preds = %1, %1
  store i32 145, i32* %2, align 4
  br label %24

16:                                               ; preds = %1, %1
  store i32 147, i32* %2, align 4
  br label %24

17:                                               ; preds = %1, %1
  store i32 143, i32* %2, align 4
  br label %24

18:                                               ; preds = %1, %1
  store i32 152, i32* %2, align 4
  br label %24

19:                                               ; preds = %1
  br label %20

20:                                               ; preds = %19
  %21 = load i32, i32* %3, align 4
  %22 = call i32 @FIXME(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0), i32 %21)
  %23 = load i32, i32* %3, align 4
  store i32 %23, i32* %2, align 4
  br label %24

24:                                               ; preds = %20, %18, %17, %16, %15, %14, %13, %12, %11, %10, %9, %8, %7, %6, %5
  %25 = load i32, i32* %2, align 4
  ret i32 %25
}

declare dso_local i32 @FIXME(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
